# skysort

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pytest.ini  todo.md  tsconfig.base.json
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_projects_and_cancel.py  0003_repair_jobs_project_fk.py  0004_visual_grouping_diagnostics.py  0005_technical_relative_scores.py  0006_ai_confidence_problem_tags.py
apps/api/src/skysort_api/: main.py
apps/api/src/skysort_api/api/: __init__.py  deps.py  router.py  schemas.py
apps/api/src/skysort_api/domain/: __init__.py  evaluation.py  grouping.py
apps/api/src/skysort_api/infra/: ai_client.py  database.py  file_scan.py  image_tools.py  logging.py  models.py  prompt_store.py  settings.py  xmp.py
apps/api/src/skysort_api/services/: __init__.py  analysis_service.py  export_service.py  group_edit_service.py  import_service.py  job_service.py  (+5 more)
apps/api/tests/: conftest.py  test_acceptance_gate.py  test_ai_client.py  test_ai_timeout_probe.py  test_analysis_service.py  test_api_contract.py  test_benchmark_diff.py  test_evaluation.py  test_export_service.py  test_group_compare_flow.py  test_group_edit_service.py  test_grouping.py  test_grouping_validate.py  test_human_review_packet.py  test_image_tools.py  test_import_service.py  test_job_service.py  test_logging.py  test_openrouter_settings.py  test_prompt_store.py  test_query_and_export_filters.py  test_review_montages.py  test_review_service.py  test_xmp.py
(+85 files in other folders)
