[project]
name = "skysort-api"
version = "0.1.0"
description = "SkySort backend API"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "imagehash>=4.3.1",
  "numpy>=2.2.0",
  "opencv-python-headless>=4.11.0.86",
  "pillow>=11.0.0",
  "pydantic-settings>=2.8.0",
  "python-multipart>=0.0.20",
  "rawpy>=0.25.0",
  "sqlalchemy>=2.0.38",
  "uvicorn>=0.34.0",
  "xxhash>=3.5.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skysort_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
